--- a/sbin/route_jobs.service
+++ b/sbin/route_jobs.service
@@ -5,9 +5,9 @@ After=network.target remote-fs.target nss-lookup.target
 [Service]
 Type=forking
 EnvironmentFile=/soft/warehouse-apps-1.0/Manage-Jobs/PROD/sbin/route_jobs.sysconfig
-ExecStart=/soft/warehouse-apps-1.0/Manage-Jobs/PROD/sbin/route_jobs.daemon start
-ExecReload=/soft/warehouse-apps-1.0/Manage-Jobs/PROD/sbin/route_jobs.daemon restart
-ExecStop=/soft/warehouse-apps-1.0/Manage-Jobs/PROD/sbin/route_jobs.daemon stop
+ExecStart=/soft/warehouse-apps-1.0/Manage-Jobs/PROD/sbin/route_jobs.sh start
+ExecReload=/soft/warehouse-apps-1.0/Manage-Jobs/PROD/sbin/route_jobs.sh restart
+ExecStop=/soft/warehouse-apps-1.0/Manage-Jobs/PROD/sbin/route_jobs.sh stop
 PIDFile=/soft/warehouse-apps-1.0/Manage-Jobs/var/route_jobs.pid
 #PrivateTmp=true
 User=software
