--- a/sbin/route_jobs.service
+++ b/sbin/route_jobs.service
@@ -3,13 +3,9 @@ Description=Information Services Jobs Router
 After=network.target remote-fs.target nss-lookup.target
 
 [Service]
-Type=forking
+Type=simple
 EnvironmentFile=/soft/warehouse-apps-1.0/Manage-Jobs/PROD/sbin/route_jobs.sysconfig
-ExecStart=/soft/warehouse-apps-1.0/Manage-Jobs/PROD/sbin/route_jobs.sh start
-ExecReload=/soft/warehouse-apps-1.0/Manage-Jobs/PROD/sbin/route_jobs.sh restart
-ExecStop=/soft/warehouse-apps-1.0/Manage-Jobs/PROD/sbin/route_jobs.sh stop
-PIDFile=/soft/warehouse-apps-1.0/Manage-Jobs/var/route_jobs.pid
-#PrivateTmp=true
+ExecStart=/soft/warehouse-apps-1.0/Manage-Jobs/PROD/sbin/route_jobs.service.sh start
 User=software
 Group=admin
 Restart=always
